# rcf-protocol

./: .gitignore  .rcfignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-RCF  NOTICE.md  RCF-AUDIT-REPORT-V1.2.8.json  RCF-BUSINESS-MODELS.md  RCF_AI_MANIFESTO.md  README.md  SECURITY.md  SOVEREIGN-CODE-MANIFESTO.md  SOVEREIGN_CODE.html  WHITE_PAPER.md  WHITE_PAPER_v1.3.md  package-lock.json  package.json  plain
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue-template.md
.github/actions/rcf-audit/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: bearer.yml  bearer.yml.disabled  ci-python.yml  ci-typescript.yml  codeql.yml  master-pipeline.yml  publish-npm.yml  publish-package.yml  publish-rust.yml  publish.yml  rcf-audit-example.yml  rcf-audit-example.yml.disabled  release-drafter.yml  release-pipeline.yml  snyk-security.yml  snyk-security.yml.disabled
ADOPTION/: ADOPTION-GUIDE.md  FAQ.md  MIGRATION.md
EXAMPLES/: RCF-AUDIT-REPORT.json  dos-kernel-example.c  example-code.py  example-license.md  example-notice.md  logic.py  rcf-guardian-workflow.yml
GOVERNANCE/: CHANGELOG.md  GOVERNANCE.md  RELEASE-NOTES.md  VERSIONING.md
IMPLEMENTATION/: API-GUIDELINES.md  CODE-MARKERS.md  TECHNICAL-MEASURES.md
IMPLEMENTATION/TEMPLATES/: HEADER.template  LICENSE.template  NOTICE-DOS.template  NOTICE.template
LEGAL/: DEFINITIONS.md  ENFORCEMENT.md  JURISDICTION.md  LEGAL.md
LEGAL/ASSETS/: MASTER-NOTICE.md  RCF-PL-1.2.7.md  RCF-PL-1.3.md
SPECIFICATION/: COMPARISON.md  RCF-ACTIVE-DEFENSE.md  RCF-COMPLIANCE.md  RCF-CORE.md  RCF-CORRELATION.md  RCF-DOS-ADOPTION.md  RCF-ENFORCEMENT.md  RCF-SIGMA.md  RCF-SPEC.md  sigma.json
SPECIFICATION/D-OS/: FLOW.md  INSTINCT.md  SENTIENCE.md
gateway/: README.md
gateway/cloudflare/: index.ts
gateway/nginx/: nginx.conf  rcf_waf.lua
scripts/: check_versions.py  cross_sdk_check.sh
sdk/: README.md
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/rcf_cli/: __init__.py  action.yml  cli.py  scanner.py
sdk/python/rcf_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sdk/python/rcf_core/: __init__.py  canary.py  corpus.py  correlate.py  measure.py  noise.py  normalize.py  normalize_python.py  pdg.py  proof.py  sentinel.py  sigma.py  wl.py
sdk/python/tests/: test_canary.py  test_correlate.py  test_cross_lang.py  test_measure.py  test_multi_lang.py  test_noise.py  test_proof.py  test_rcf_core.py  test_robots.py  test_scanner.py  test_sentinel.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/typescript/: .gitignore  .npmrc  LICENSE  README.md  jest.config.js  package-lock.json  package.json  run_tests.js  test_export.cjs  tsconfig.json
sdk/typescript/src/: index.ts  package.json
sdk/typescript/src/cli/: index.ts
sdk/typescript/src/core/: ComplianceValidator.ts  MarkerParser.ts  Scanner.ts  canary.ts  constants.ts  corpus.ts  correlate.ts  (+12 more)
sdk/typescript/tests/: canary.test.ts  correlate.test.ts  cross_lang.test.ts  ghost-protocol.test.ts  integrity-chain.test.ts  integrity-protocol.test.ts  measure.test.ts  multi_lang.test.ts  noise.test.ts  proof.test.ts  rcf_core.test.ts  robots.test.ts  scanner.test.ts  sentinel.test.ts
