[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rcf-cli"
version = "2.0.3"
authors = [
  { name="Aladdin Aliyev", email="aladdin@aliyev.site" },
]
description = "RCF Ghost Shield — Active Protection Framework (Python Edition)"
license = { text = "RCF-PL v2.0.3" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
rcf-ghost-shield = "rcf_cli.cli:main"
rcf-cli = "rcf_cli.cli:main"
rcf-protocol = "rcf_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rcf_cli*"]
