[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rcf-cli"
version = "2.1.2"
authors = [
  { name="Aladdin Aliyev", email="aladdin@aliyev.site" },
]
description = "RCF CLI — Active Protection & Audit Framework (Python Edition)"
license = { text = "RCF-PL" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
rcf-cli = "rcf_cli.cli:main"
rcf-protocol = "rcf_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
# Only rcf_cli ships to PyPI. rcf_core is the RCF v3 research engine
# ([RCF:PROTECTED], Draft) and is deliberately NOT packaged yet — see the
# packaging roadmap before publishing it.
include = ["rcf_cli*"]

[tool.pytest.ini_options]
# Make the in-tree rcf_core importable during tests WITHOUT shipping it in the
# distribution. CI runs `pip install -e .` (rcf_cli only), then `pytest tests/`;
# pythonpath="." puts the source root on sys.path so test_rcf_core / test_correlate
# can import rcf_core locally.
pythonpath = ["."]
testpaths = ["tests"]
