[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rcf-cli"
version = "2.1.7"
authors = [
  { name="Aladdin Aliyev", email="aladdin@aliyev.site" },
]
description = "RCF CLI — Active Protection & Audit Framework (Python Edition)"
license = { text = "RCF-PL" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
rcf-cli = "rcf_cli.cli:main"
rcf-protocol = "rcf_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rcf_cli*", "rcf_core*"]

[tool.setuptools.package-data]
"rcf_core.data" = ["*.json"]

[tool.pytest.ini_options]
# CI runs `pip install -e .` which now includes both rcf_cli and rcf_core.
# pythonpath="." keeps the source root on sys.path for local dev runs too.
pythonpath = ["."]
testpaths = ["tests"]
